# study

./: .gitignore
ArtificialIntelligent/: CMakeLists.txt  cuda_test.cu  idf.h  knn.cpp  n_queen.cpp  one_hot.h  reversi.cpp  tf.h  tfidf.cpp
BaseOfHighPerformanceComputing/: CMakeLists.txt
BaseOfHighPerformanceComputing/Experiment1/: CMakeLists.txt  image_rotate.cpp  image_smooth.cpp
CompilerTheory/: 04_02.cpp  04_02_Input  05_01.cpp  CMakeLists.txt
Multicore/: CMakeLists.txt  hw1_cuda.cpp  hw1_omp.cpp
SuperComputing/: CMakeLists.txt
SuperComputing/openmp_homework/: CMakeLists.txt  dijkstra.cpp  generateGraph.py  multi_producer_multi_consumer.cpp  producer_consumer.c
SuperComputing/pthreads_read_write_lock/: CMakeLists.txt  input  my_rand.h  my_read_write_lock.h  pthreads_link_list_read_write_lock.cpp  timer.h
SuperComputing/simd_homework/: CMakeLists.txt  canny_edge.c  ccpuid.h  simdsumdouble.c  simdsumint.c  zintrin.h
SuperComputing/test/: CMakeLists.txt  gfl_chip.cpp  test.cpp  test2.cpp
